test/libyul/yulSyntaxTests/objects/dataoffset_nonstring.yul
object "A" {
  code {
    pop(dataoffset(0))
  }
}
// ====
// bytecodeFormat: legacy
// ----
// TypeError 5859: (41-42): Function expects string literal.
